--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "next": "12.1.5",
     "next-themes": "^0.1.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-select": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
