--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.6",
     "next": "12.1.5",
+    "next-pwa": "^5.5.4",
     "next-themes": "^0.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
