--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "theme_color": "#f69435",
-    "background_color": "#f69435",
+    "theme_color": "#e6e6e6",
+    "background_color": "#f4f0ed",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
