--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ client/public/workbox-74d02f44.js.map
 client/public/workbox-74d02f44.js
 client/public/sw.js.map
 client/public/sw.js
+server/run.bat
