--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.6",
+    "formik": "^2.2.9",
     "next": "12.1.5",
     "next-pwa": "^5.5.4",
     "next-themes": "^0.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.30.0",
-    "react-select": "^5.3.0"
+    "react-query": "^3.39.1",
+    "react-select": "^5.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
