--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
-    "firebase": "^9.9.0",
+    "firebase": "9.7.0",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
